Bug 1395964 - Don't clear the previously painted image on intrinsic size changes. r=tnikkel

This is needed if we want to handle cases like the reporter's example or Google
Images. Rendering the old image upscaled is much better than not rendering
anything while it's loading.

I added a test for the reframing bit, but I don't know how to add a test for the
second bit.

Differential Revision: https://phabricator.services.mozilla.com/D23127